--- a/Mark/第一天.md
+++ b/Mark/第一天.md
@@ -16,7 +16,7 @@
 - 通过`npm i --save normalize.css`重置css默认样式，并复制到assets目录下
 - 创建自己的`base.css`文件,并在`App.vue`中导入
 
-### 设置文件的别名
+## 设置文件的别名
   在根目录下创建一个`vue.config.js`文件，并配置：
   ```javascript
   const path = require('path'); // 引入path模块
@@ -36,5 +36,24 @@ module.exports = {
 };
   ```
 ---
+## 导入之前的Tabbar
+tabbar是封装好的组件可以直接导入，MainTabbar是要用户自己传入图片资源，所以放到content目录下，然后再`App.vue`里注册MainTabbar并使用它
+
+然后安装vue-router，并配置相关的路径，然后在`App.vue`中使用`<router-view/>`显示
+![Tabbar路由配置](img/Tabbar路由配置.png)
+
+---
+## 首页的配置
+### 配置Nav-Bar导航
+![navbar配置](img/navbar配置.png)
+
+### 导入之前的网络封装
+![网络封装](img/网络封装.png)
+### 在首页发送网络请求
+在network中新建了一个`home.js`创建一个函数来发送网络请求，然后返回一个Promise
+![首页发送网络请求](img/首页发送网络请求.png)
+
+调用`getHomeMultidata()`方达来发送网络请求，并创建一个数据保存获取到的轮播图数据
+![首页调用发送网络请求](img/首页调用发送网络请求.png)
 
 
