--- a/Mark/第二天.md
+++ b/Mark/第二天.md
@@ -4,3 +4,9 @@
 ![](img/首页goods的网络封装.png)
 
 ### 对首页网络请求的方法做一个封装
+![首页商品网络请求](img/首页网络请求封装.png)
+
+### 创建GoodsList组件
+这是全部商品的组件，每个商品用GoodsList-Item来展示，把请求来的数据（数组）通过`v-for`遍历传给GoodsList-Item用对象来保存每个商品的数据![](img/goodsList.png)
+
+### 创建GoodsList-Item组件
